--- a/app/index.html
+++ b/app/index.html
@@ -15,10 +15,7 @@
             Home
         </md-nav-item>
         <md-nav-item md-nav-href="#!/about">
-            About
-        </md-nav-item>
-        <md-nav-item md-nav-href="#!/prova">
-            Page Three
+            Fake promise
         </md-nav-item>
     </md-nav-bar>
 
