Add grunt-script-link-tags to include files .js in index.html automatically

--- a/app/index.html
+++ b/app/index.html
@@ -21,17 +21,19 @@
 
     <div ng-view></div>
 
-    <script src="lib/angular/angular.min.js"></script>
-    <script src="lib/angular-route/angular-route.min.js"></script>
-    <script src="lib/angular-material/angular-material.min.js"></script>
-    <script src="lib/angular-aria/angular-aria.min.js"></script>
-    <script src="lib/angular-animate/angular-animate.min.js"></script>
-    <script src="lib/angular-messages/angular-messages.min.js"></script>
-    <script src="app.module.js"></script>
-    <script src="app.config.js"></script>
-    <script src="controllers/homeCtrl.js"></script>
-    <script src="controllers/aboutCtrl.js"></script>
-    <script src="services/logger.js"></script>
-    <script src="services/getFakeAPI.js"></script>
+    <!-- start auto template tags -->
+    <script type="text/javascript" src="lib/angular-animate/angular-animate.min.js"></script>
+    <script type="text/javascript" src="lib/angular-aria/angular-aria.min.js"></script>
+    <script type="text/javascript" src="lib/angular-material/angular-material.min.js"></script>
+    <script type="text/javascript" src="lib/angular-messages/angular-messages.min.js"></script>
+    <script type="text/javascript" src="lib/angular-route/angular-route.min.js"></script>
+    <script type="text/javascript" src="lib/angular/angular.min.js"></script>
+    <script type="text/javascript" src="app.config.js"></script>
+    <script type="text/javascript" src="app.module.js"></script>
+    <script type="text/javascript" src="controllers/aboutCtrl.js"></script>
+    <script type="text/javascript" src="controllers/homeCtrl.js"></script>
+    <script type="text/javascript" src="services/getFakeAPI.js"></script>
+    <script type="text/javascript" src="services/logger.js"></script>
+    <!-- end auto template tags -->
 </body>
 </html>
