--- a/app/index.html
+++ b/app/index.html
@@ -22,18 +22,20 @@
     <div ng-view></div>
 
     <!-- start auto template tags -->
+    <script type="text/javascript" src="lib/angular/angular.min.js"></script>
     <script type="text/javascript" src="lib/angular-animate/angular-animate.min.js"></script>
     <script type="text/javascript" src="lib/angular-aria/angular-aria.min.js"></script>
     <script type="text/javascript" src="lib/angular-material/angular-material.min.js"></script>
     <script type="text/javascript" src="lib/angular-messages/angular-messages.min.js"></script>
     <script type="text/javascript" src="lib/angular-route/angular-route.min.js"></script>
-    <script type="text/javascript" src="lib/angular/angular.min.js"></script>
-    <script type="text/javascript" src="app.config.js"></script>
     <script type="text/javascript" src="app.module.js"></script>
+    <script type="text/javascript" src="app.config.js"></script>
     <script type="text/javascript" src="controllers/aboutCtrl.js"></script>
     <script type="text/javascript" src="controllers/homeCtrl.js"></script>
+    <script type="text/javascript" src="services/env/envinronment.js"></script>
     <script type="text/javascript" src="services/getFakeAPI.js"></script>
     <script type="text/javascript" src="services/logger.js"></script>
+    <script type="text/javascript" src="env/env.details.js"></script>
     <!-- end auto template tags -->
 </body>
 </html>
